--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
-<h2>Igor Tiulkanov <img src="new_latest.jpg" alt="Your Name"></h2>
+<h2>Igor Tiulkanov
+  <div style="float:right;">
+  <img src="path/to/image.jpg" alt="Your Name" width="100" height="100">
+</div>
 <p>Contact Information: ityulkanov@gmail.com | (534) 036-1167</p>
 <h2>Summary</h2>
 <p>A brief summary of your skills and experience.</p>
