--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+</head>
+<body>
 <h2>Igor Tiulkanov
   <div style="float:right;">
   <img src="path/to/image.jpg" alt="Your Name" width="100" height="100">
@@ -41,3 +49,5 @@ several environments, refactored code, and prod deployment.
 <li>AWS Cloudformation</li>
 <li>Graphana</li>
 <li>Jenkins</li>
+</body>
+<footer></footer>
