--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <h2>Igor Tiulkanov
   <div style="float:right;">
-  <img src="path/to/image.jpg" alt="Your Name" width="100" height="100">
+  <img src="new_latest.jpg" alt="Your Name" width="100" height="100">
 </div>
 <p>Contact Information: ityulkanov@gmail.com | (534) 036-1167</p>
 <h2>Summary</h2>
