--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
   <div style="float:right;">
   <img src="new_latest.jpg" alt="Your Name" width="100" height="100">
 </div>
-<p>Contact Information: ityulkanov@gmail.com | (534) 036-1167</p>
+<p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
 <h2>Summary</h2>
-<p>A brief summary of your skills and experience.</p>
 <h2>Education</h2>
 <h3>Degree, Major - University Name</h3>
 <p>Graduation Date</p>
