--- a/index.html
+++ b/index.html
@@ -1,52 +1,63 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <title>Igor Tiulkanov Personal Resume</title>
 </head>
 <body>
-<h2>Igor Tiulkanov
-  <div style="float:right;">
-  <img src="new_latest.jpg" alt="Your Name" width="100" height="100">
-</div>
-<p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
-<h2>Summary</h2>
-<h2>Education</h2>
-<h3>Degree, Major - University Name</h3>
-<p>Graduation Date</p>
-<p>A brief description of your education and any relevant coursework.</p>
-<h2>Work Experience</h2>
-<p>EPAM Systems Inc (Беларусь)</p>
-<h3>Position Data Engineer / Go developer</h3>
-<p>Employment Dates March 2021 — till now</p>
-<h4>Project: Software for network control enterprise solutions:</h4>
-<ul>
-<li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
-<li>Network services (DNS, DHCP, IPAM);</li>
-<li>Hybrid cloud and virtualization (network automation for cloud);</li>
-<li>Network automation.</li>
-<li>Updated an enrichment service to work with different types of encoded data used in the system
-(Avro, Protobuf, Json, etc).</li>
-<li>Built a new service from the ground up to interact with Postgres DB that replaced a functionality of a
-working EMR and added to the current deployment pipeline.
-Added a new module to enrichment software.
-Refactored load test application tool
-Added several new dashboards into Grafana
-Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
-needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
-several environments, refactored code, and prod deployment.
-  Participated in project discussions, and offered technical solutions for current tasks.</li>
-  <h3>Team: 2 team leads, 6 developers,</h3>
-  <h2>Skills / Technologies</h2>
-<li>ElasticSearch</li>
-<li>Kafka</li>
-<li>Kubernetes</li>
-<li>Helm</li>
-<li>AWS EC2</li>
-<li>AWS S3</li>
-<li>AWS Cloudformation</li>
-<li>Graphana</li>
-<li>Jenkins</li>
+<h2>Igor Tiulkanov</h2>
+    <div style="float:right;">
+        <img src="new_latest.jpg" alt="Your Name" width="83" height="100">
+    </div>
+    <p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
+    <h2>Summary</h2>
+    <h2>Education</h2>
+    <h3>Degree, Major - University Name</h3>
+    <p>Graduation Date</p>
+    <p>A brief description of your education and any relevant coursework.</p>
+    <h2>Work Experience</h2>
+    <p>EPAM Systems Inc (Беларусь)</p>
+    <h3>Position Data Engineer / Go developer</h3>
+    <p>Employment Dates March 2021 — till now</p>
+    <h4>Project: Software for network control enterprise solutions:</h4>
+    <ul>
+        <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
+        <li>Network services (DNS, DHCP, IPAM);</li>
+        <li>Hybrid cloud and virtualization (network automation for cloud);</li>
+        <li>Network automation.</li>
+        <li>Updated an enrichment service to work with different types of encoded data used in the system
+            (Avro, Protobuf, Json, etc).
+        </li>
+        <li>Built a new service from the ground up to interact with Postgres DB that replaced a functionality of a
+            working EMR and added to the current deployment pipeline.
+            Added a new module to enrichment software.
+            Refactored load test application tool
+            Added several new dashboards into Grafana
+            Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
+            needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
+            several environments, refactored code, and prod deployment.
+            Participated in project discussions, and offered technical solutions for current tasks.
+        </li>
+    </ul>
+    <h3>Team: 2 team leads, 6 developers,</h3>
+    <h2>Skills / Technologies</h2>
+    <ul>
+        <li>ElasticSearch</li>
+        <li>Kafka</li>
+        <li>Kubernetes</li>
+        <li>Helm</li>
+        <li>AWS EC2</li>
+        <li>AWS S3</li>
+        <li>AWS Cloudformation</li>
+        <li>Graphana</li>
+        <li>Jenkins</li>
+    </ul>
+
 </body>
-<footer></footer>
+</html>
