update work experience

--- a/index.html
+++ b/index.html
@@ -9,55 +9,115 @@
             crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <title>Igor Tiulkanov Personal Resume</title>
+    <meta charset="UTF-8">
 </head>
 <body>
-<h2>Igor Tiulkanov</h2>
-    <div style="float:right;">
-        <img src="new_latest.jpg" alt="Your Name" width="83" height="100">
-    </div>
-    <p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
-    <h2>Summary</h2>
-    <h2>Education</h2>
-    <h3>Degree, Major - University Name</h3>
-    <p>Graduation Date</p>
-    <p>A brief description of your education and any relevant coursework.</p>
-    <h2>Work Experience</h2>
-    <p>EPAM Systems Inc (Беларусь)</p>
-    <h3>Position Data Engineer / Go developer</h3>
-    <p>Employment Dates March 2021 — till now</p>
-    <h4>Project: Software for network control enterprise solutions:</h4>
-    <ul>
-        <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
-        <li>Network services (DNS, DHCP, IPAM);</li>
-        <li>Hybrid cloud and virtualization (network automation for cloud);</li>
-        <li>Network automation.</li>
-        <li>Updated an enrichment service to work with different types of encoded data used in the system
-            (Avro, Protobuf, Json, etc).
-        </li>
-        <li>Built a new service from the ground up to interact with Postgres DB that replaced a functionality of a
-            working EMR and added to the current deployment pipeline.
-            Added a new module to enrichment software.
-            Refactored load test application tool
-            Added several new dashboards into Grafana
-            Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
-            needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
-            several environments, refactored code, and prod deployment.
-            Participated in project discussions, and offered technical solutions for current tasks.
-        </li>
-    </ul>
-    <h3>Team: 2 team leads, 6 developers,</h3>
-    <h2>Skills / Technologies</h2>
-    <ul>
-        <li>ElasticSearch</li>
-        <li>Kafka</li>
-        <li>Kubernetes</li>
-        <li>Helm</li>
-        <li>AWS EC2</li>
-        <li>AWS S3</li>
-        <li>AWS Cloudformation</li>
-        <li>Graphana</li>
-        <li>Jenkins</li>
-    </ul>
+<div class="container-fluid">
+    <div class="container text-center mt-5">
+        <div class="row">
+            <div class="col">
+                <h1>Igor Tiulkanov</h1>
+            </div>
+            <div class="col">
+                <img src="120x100.jpg" alt="Igor Tiulkanov" width="100" height="120">
+            </div>
+        </div>
+        <div class="row">
+            <p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
+        </div>
+        <div class="row">
+            <h2>Education</h2>
+        </div>
+        <div class="row">
+            <p class="text-start">Engineering, Food Processing - Nizhegorod Agricultrural Academy</p>
+        </div>
+        <div class="row">
+            <p>Graduation: 2006</p>
+        </div>
+        <div class="row">
+            <h2>Work Experience</h2>
+        </div>
+        <div class="row">
+            <p>EPAM Systems Inc (Беларусь)</p>
+        </div>
+        <div class="row">
+            <h3>Position Data Engineer / Go developer</h3>
+        </div>
+        <div class="row">
+            <p>Employment Dates: March 2021 — Now</p>
+        </div>
+        <div class="row">
+            <h5>Project: Software for network control enterprise solutions:</h5>
+        </div>
+        <div class="row mb-3">
+                <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
+                <li>Network services (DNS, DHCP, IPAM);</li>
+                <li>Hybrid cloud and virtualization (network automation for cloud);</li>
+                <li>Network automation.</li>
+                <li>Updated an enrichment service to work with different types of encoded data
+                    used in the system
+                    (Avro, Protobuf, Json, etc).
+                </li>
+                <li>Built a new service from the ground up to interact with Postgres DB that
+                    replaced a functionality of a
+                    working EMR and added to the current deployment pipeline.
+                    Added a new module to enrichment software.
+                    Refactored load test application tool
+                    Added several new dashboards into Grafana
+                    Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
+                    needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
+                    several environments, refactored code, and prod deployment.
+                    Participated in project discussions, and offered technical solutions for current tasks.
+                </li>
+        </div>
+        <div class="row mb-2">
+            <h5>Team: 2 team leads, 6 developers</h5>
+        </div>
+        <div class="row">
+            <h5>Skills / Technologies</h5>
+        </div>
+        <div class="row">
+            <p>ElasticSearch, Kafka, Kubernetes, Helm, AWS EC2, AWS S3, AWS Cloudformation, Grafana, Jenkins</p>
+        </div>
 
+        <div class="row">
+            <h3>EPAM Systems Inc (Беларусь)</h3>
+        </div>
+        <div class="row">
+            <h4>Data Engineer Trainee</h4>
+        </div>
+        <div class="row">
+            <p>December 2020
+                — March 2021
+                4 months</p>
+        </div>
+        <div class="row">
+            <h5>Project: EPMD-ISKL</h5>
+        </div>
+        <div class="row">
+                <li>Participated in discussion with team members for resolving organizational and technical issues</li>
+                <li>Network services (DNS, DHCP, IPAM);</li>
+                <li>Installed and setup Hadoop High Availability Cluster consists two-node via docker-compose, cli.</li>
+                <li>Implemented queries for Hive, analysis performance, and method of optimization.</li>
+                <li>Implemented MapReduce (Hadoop Streaming) and Spark Jobs for performing processing data</li>
+                <li>Developed Spark integration with Kafka for performing processing data. Using Elasticsearch and</li>
+                <li>Perform data processing via Apache NiFi.</li>
+                <li>Used Cassandra database for providing queries.</li>
+                <li>Developed and supported unit testing to ensure the quality of code.</li>
+                <li>Created a data flow application using docker-compose, StreamSets, and custom Java-based stream set stages.</li>
+        </div>
+        <div class="row">
+            <h5>Team: Developer: 3 members, Team Lead: 1 member, QA: 1 members</h5>
+        </div>
+        <div class="row">
+            <h5>Skills / Technologies</h5>
+        </div>
+        <div class="row">
+            <p>Java, Scala, Apache Hadoop (HDFS, MapReduce), Hive, Apache Spark, Kafka Streaming, Apache Kafka, Apache
+                NiFi</p>
+        </div>
+    </div>
+</div>
+</div>
 </body>
 </html>
