--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="row">
-            <p>Contact Information: ityulkanov@gmail.com | +90 (534) 036-1167</p>
+            <p>Contact Information: <a href="mailto:ityulkanov@gmail.com">ityulkanov@gmail.com</a> | <a href="tel:+90(534)0361167"></a> +90 (534) 036-1167</p>
         </div>
         <div class="row">
             <h2>Education</h2>
