--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
             <h4>Data Engineer Trainee</h4>
         </div>
         <div class="row">
-            <p>December 2020
-                — March 2021
-                4 months</p>
+            <p>Employment Dates: December 2020 — March 2022</p>
         </div>
         <div class="row">
             <h5>Project: EPMD-ISKL</h5>
