--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
             </div>
         </div>
         <div class="row">
-            <p>Contact Information: <a href="mailto:ityulkanov@gmail.com">ityulkanov@gmail.com</a> | <a href="tel:+90(534)0361167"></a> +90 (534) 036-1167</p>
+            <p>Contact Information: <a href="mailto:ityulkanov@gmail.com">ityulkanov@gmail.com</a> | <a
+                    href="tel:+90(534)0361167"></a> +90 (534) 036-1167</p>
         </div>
         <div class="row">
             <h2>Education</h2>
         </div>
         <div class="row">
-            <p class="text-start">Engineering, Food Processing - Nizhegorod Agricultrural Academy</p>
+            <p class="text-start">Engineering, Food Processing - Nizhegorod Agricultural Academy</p>
         </div>
         <div class="row">
             <p>Graduation: 2006</p>
@@ -50,25 +51,27 @@
             <h5>Project: Software for network control enterprise solutions:</h5>
         </div>
         <div class="row mb-3">
-            <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
-            <li>Network services (DNS, DHCP, IPAM);</li>
-            <li>Hybrid cloud and virtualization (network automation for cloud);</li>
-            <li>Network automation.</li>
-            <li>Updated an enrichment service to work with different types of encoded data
-                used in the system
-                (Avro, Protobuf, Json, etc).
-            </li>
-            <li>Built a new service from the ground up to interact with Postgres DB that
-                replaced a functionality of a
-                working EMR and added to the current deployment pipeline.
-                Added a new module to enrichment software.
-                Refactored load test application tool
-                Added several new dashboards into Grafana
-                Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
-                needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
-                several environments, refactored code, and prod deployment.
-                Participated in project discussions, and offered technical solutions for current tasks.
-            </li>
+            <ul>
+                <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
+                <li>Network services (DNS, DHCP)</li>
+                <li>Hybrid cloud and virtualization (network automation for cloud);</li>
+                <li>Network automation.</li>
+                <li>Updated an enrichment service to work with different types of encoded data
+                    used in the system
+                    (Avro, Protobuf, Json, etc).
+                </li>
+                <li>Built a new service from the ground up to interact with Postgres DB that
+                    replaced a functionality of a
+                    working EMR and added to the current deployment pipeline.
+                    Added a new module to enrichment software.
+                    Refactored load test application tool
+                    Added several new dashboards into Grafana
+                    Developed a feature on go DNS data enrichment service, loading data from Kafka, fetching fields
+                    needed, storing them into Redis, and enriching DNS data with these fields added tests, tested it on
+                    several environments, refactored code, and prod deployment.
+                    Participated in project discussions, and offered technical solutions for current tasks.
+                </li>
+            </ul>
         </div>
         <div class="row mb-2">
             <h5>Team: 2 team leads, 6 developers</h5>
@@ -93,18 +96,20 @@
             <h5>Project: EPMD-ISKL</h5>
         </div>
         <div class="row">
-            <li>Participated in discussion with team members for resolving organizational and technical issues</li>
-            <li>Network services (DNS, DHCP, IPAM);</li>
-            <li>Installed and setup Hadoop High Availability Cluster consists two-node via docker-compose, cli.</li>
-            <li>Implemented queries for Hive, analysis performance, and method of optimization.</li>
-            <li>Implemented MapReduce (Hadoop Streaming) and Spark Jobs for performing processing data</li>
-            <li>Developed Spark integration with Kafka for performing processing data. Using Elasticsearch and</li>
-            <li>Perform data processing via Apache NiFi.</li>
-            <li>Used Cassandra database for providing queries.</li>
-            <li>Developed and supported unit testing to ensure the quality of code.</li>
-            <li>Created a data flow application using docker-compose, StreamSets, and custom Java-based stream set
-                stages.
-            </li>
+           <ul>
+               <li>Participated in discussion with team members for resolving organizational and technical issues</li>
+               <li>Network services (DNS, DHCP)</li>
+               <li>Installed and setup Hadoop High Availability Cluster consists two-node via docker-compose, cli.</li>
+               <li>Implemented queries for Hive, analysis performance, and method of optimization.</li>
+               <li>Implemented MapReduce (Hadoop Streaming) and Spark Jobs for performing processing data</li>
+               <li>Developed Spark integration with Kafka for performing processing data. Using Elasticsearch and</li>
+               <li>Perform data processing via Apache NiFi.</li>
+               <li>Used Cassandra database for providing queries.</li>
+               <li>Developed and supported unit testing to ensure the quality of code.</li>
+               <li>Created a data flow application using docker-compose, StreamSets, and custom Java-based stream set
+                   stages.
+               </li>
+           </ul>
         </div>
         <div class="row">
             <h5>Team: Developer: 3 members, Team Lead: 1 member, QA: 1 members</h5>
