--- a/index.html
+++ b/index.html
@@ -39,28 +39,28 @@
             <h2>Work Experience</h2>
         </div>
         <div class="row">
-            <h4>EPAM Systems Inc (Беларусь)</h4>
+            <h4>Company: EPAM Systems Inc (Беларусь)</h4>
         </div>
         <div class="row">
-            <h3>Position Data Engineer / Go developer</h3>
+            <h4>Position: Data Engineer / Go developer</h4>
         </div>
         <div class="row">
-            <p>Employment Dates: March 2021 — Now</p>
+            <h5>Employment Dates: 04/2021 — </h5>
         </div>
         <div class="row">
             <h5>Project: Software for network control enterprise solutions:</h5>
         </div>
         <div class="row mb-3">
-            <ul>
-                <li>Secure DNS (DNS Firewall and Response Policy Zone);</li>
-                <li>Network services (DNS, DHCP)</li>
-                <li>Hybrid cloud and virtualization (network automation for cloud);</li>
-                <li>Network automation.</li>
-                <li>Updated an enrichment service to work with different types of encoded data
+            <ul class="justify-content-start">
+                <li class="text-left">Secure DNS (DNS Firewall and Response Policy Zone);</li>
+                <li class="text-left">Network services (DNS, DHCP)</li>
+                <li class="text-left">Hybrid cloud and virtualization (network automation for cloud);</li>
+                <li class="text-left">Network automation.</li>
+                <li class="text-left">Updated an enrichment service to work with different types of encoded data
                     used in the system
                     (Avro, Protobuf, Json, etc).
                 </li>
-                <li>Built a new service from the ground up to interact with Postgres DB that
+                <li class="text-left">Built a new service from the ground up to interact with Postgres DB that
                     replaced a functionality of a
                     working EMR and added to the current deployment pipeline.
                     Added a new module to enrichment software.
@@ -84,29 +84,29 @@
         </div>
 
         <div class="row">
-            <h4>EPAM Systems Inc (Беларусь)</h4>
+            <h4>Company: EPAM Systems Inc (Беларусь)</h4>
         </div>
         <div class="row">
-            <h4>Data Engineer Trainee</h4>
+            <h4>Position: Data Engineer Trainee</h4>
         </div>
-        <div class="row">
-            <p>Employment Dates: December 2020 — March 2022</p>
+        <div class="row mt-2">
+            <h5>Employment Dates: 12/2020 — 03/2022</h5>
         </div>
         <div class="row">
             <h5>Project: EPMD-ISKL</h5>
         </div>
         <div class="row">
            <ul>
-               <li>Participated in discussion with team members for resolving organizational and technical issues</li>
-               <li>Network services (DNS, DHCP)</li>
-               <li>Installed and setup Hadoop High Availability Cluster consists two-node via docker-compose, cli.</li>
-               <li>Implemented queries for Hive, analysis performance, and method of optimization.</li>
-               <li>Implemented MapReduce (Hadoop Streaming) and Spark Jobs for performing processing data</li>
-               <li>Developed Spark integration with Kafka for performing processing data. Using Elasticsearch and</li>
-               <li>Perform data processing via Apache NiFi.</li>
-               <li>Used Cassandra database for providing queries.</li>
-               <li>Developed and supported unit testing to ensure the quality of code.</li>
-               <li>Created a data flow application using docker-compose, StreamSets, and custom Java-based stream set
+               <li class="text-left">Participated in discussion with team members for resolving organizational and technical issues</li>
+               <li class="text-left">Network services (DNS, DHCP)</li>
+               <li class="text-left">Installed and setup Hadoop High Availability Cluster consists two-node via docker-compose, cli.</li>
+               <li class="text-left">Implemented queries for Hive, analysis performance, and method of optimization.</li>
+               <li class="text-left">Implemented MapReduce (Hadoop Streaming) and Spark Jobs for performing processing data</li>
+               <li class="text-left">Developed Spark integration with Kafka for performing processing data. Using Elasticsearch and</li>
+               <li class="text-left">Perform data processing via Apache NiFi.</li>
+               <li class="text-left">Used Cassandra database for providing queries.</li>
+               <li class="text-left">Developed and supported unit testing to ensure the quality of code.</li>
+               <li class="text-left">Created a data flow application using docker-compose, StreamSets, and custom Java-based stream set
                    stages.
                </li>
            </ul>
