--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="row">
             <p>Contact Information: <a href="mailto:ityulkanov@gmail.com">ityulkanov@gmail.com</a> | <a
-                    href="tel:+90(534)0361167"></a> +90 (534) 036-1167</p>
+                    href="tel:+90(534)0361167">+90 (534) 036-1167</a></p>
         </div>
         <div class="row">
             <h2>Education</h2>
@@ -36,7 +36,7 @@
             <p>Graduation: 2006</p>
         </div>
         <div class="row">
-            <h2>Work Experience</h2>
+            <h2>Work Experience <i>4 years, 3 months</i></h2>
         </div>
         <div class="row">
             <h4>Company: EPAM Systems Inc (Беларусь)</h4>
@@ -121,7 +121,10 @@
             <p>Java, Scala, Apache Hadoop (HDFS, MapReduce), Hive, Apache Spark, Kafka Streaming, Apache Kafka, Apache
                 NiFi</p>
         </div>
+        <div class="row mt-5"></div>
     </div>
 </div>
 </body>
+<footer>
+</footer>
 </html>
